fixed double scroll bars

--- a/css/movie.css
+++ b/css/movie.css
@@ -8,7 +8,8 @@
     grid-template-columns: 1fr;
     grid-gap: 20px;
     position: relative;
-    top: 120px;
+    overflow-y: hidden;
+    margin-top: 120px;
     grid-template-areas:
     'movie-detail'
     'cast-block'
@@ -64,7 +65,7 @@
     height: 100%;
     padding: 20px;
     grid-template-columns: 2fr 3fr 1fr;
-    grid-template-rows: 80px 60px 120px auto;
+    grid-template-rows: 100px 60px 120px auto;
     grid-template-areas:
     'title          title       title'
     'res            rating      rating-circle'
